@@ -99,9 +99,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <jdk.min.version>1.8</jdk.min.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <jdk.min.version>11</jdk.min.version>
 
         <!-- Dependency versions, please keep alphabetically -->
         <com.squareup.okhttp.okhttp-urlconnection.version>3.14.9</com.squareup.okhttp.okhttp-urlconnection.version>
@@ -111,7 +111,7 @@
         <junit.version>4.13.1</junit.version>
         <org.apache.xmlrpc.xmlrpc-client>3.1.3</org.apache.xmlrpc.xmlrpc-client>
         <org.gitlab4j.gitlab4j-api.version>4.14.30</org.gitlab4j.gitlab4j-api.version>
-        <org.mockito.version>1.10.19</org.mockito.version>
+        <org.mockito.version>5.10.0</org.mockito.version>
         <org.wildfly.checkstyle-config.version>1.0.4.Final</org.wildfly.checkstyle-config.version>
         <org.kohsuke.github-api.version>1.119</org.kohsuke.github-api.version>
     </properties>
@@ -201,6 +201,12 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <argLine>
+                            --add-opens=java.base/java.lang=ALL-UNNAMED
+                            --add-opens=java.base/java.util=ALL-UNNAMED
+                        </argLine>
+                    </configuration>
                     <executions>
                         <execution>
                             <id>default-test</id>
@@ -232,7 +238,7 @@
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
+            <artifactId>mockito-core</artifactId>
             <version>${org.mockito.version}</version>
             <scope>test</scope>
         </dependency>
